# docugenie

./: LICENCE  README.md
backend/: .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  test.py
backend/app/: config.py  lifetime.py  main.py
backend/app/api/: base.py  docu_history.py  docu_query.py  docu_upload.py
backend/app/databases/: db.py
backend/app/llms/: openai_llm.py
backend/app/models/: api.py  database.py  embeddings.py  file.py  query.py  querying.py  users.py
backend/app/services/: chunking.py  db_crud.py  document_service.py  embedding.py  ingest.py  query_service.py  text_embedding.py  user_service.py  vector_db_crud.py
backend/app/utils/: file_utils.py
frontend/: README.md  index.html
frontend/src/: App.jsx  index.css  nav-items.jsx
frontend/src/components/: ChatMessage.jsx  ColorBall.jsx  HelpOverlay.jsx  Toast.jsx  UploadOverlay.jsx
frontend/src/middleware/: apiMiddleware.js
frontend/src/pages/: Chat.jsx  Index.jsx
